syntax = "proto3";
package safehouse.ams.models;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.LifeSituations";

import "Models/LifeSituations/Inquiry.proto";

message LifeSituationDocument {
  oneof Document{
    Inquiry Inquiry = 1;
  }
}